# qoal-engine

./: CMakeLists.txt  README.md  main.cpp
ecs/: ecs.hpp  entity.hpp
ecs/components/: camera.hpp  collider.hpp  components.hpp  mesh.hpp  null_component.hpp  rendering_system.hpp  rigidbody.hpp  transform.hpp
qed/: qed.hpp
structs/: vertex.hpp
thm/: thm.hpp
vkr/: vkr.hpp
vkr/renderers/: base_renderer.hpp  renderers.hpp
vkr/renderers/shaders/GLSL/: base_triangle_2d.frag  base_triangle_2d.vert  base_triangle_3d.vert
vkr/renderers/shaders/SPIR-V/: base_triangle_2d.vert.spv  base_triangle_3d.vert.spv
vkr/rendering/: buffers.hpp  command_pool.hpp  debugger.hpp  device.hpp  instance.hpp  mesh_pool.hpp  pipeline.hpp  render.hpp  rendering.hpp  surface.hpp  swapchain.hpp  validation_layers.hpp  window.hpp
